# vfscpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
include/vfs/: FileInfo.h  FileSystem.h  IFS.h  IFile.h  RegularFile.h  VFS.h  global.h
src/: CMakeLists.txt  FileSystem.cpp  RegularFile.cpp
test/: CMakeLists.txt  FileSystemTest.cpp  RegularFileTest.cpp
test/data/: file.txt
